--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,40 @@
-/* 
+.container1 {
+background-color: black;
+width: 15px;
+height: 80px;
+margin: auto;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+
+.container {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 25px;
+}
+
+
+
+
+.col-12 {
+    width: 90px;
+    height: 80px;
+    margin: 5px;
+    padding: 5px;
+    align-items: center;
+    line-height: 80px;
+}
+
+button {
+    width: 50px;
+    height: 50px;
+
+}
+
+.btn {
+    border-radius: 50px;
+}
